--- a/ProjectDriver_Client/Pages/Login.cshtml
+++ b/ProjectDriver_Client/Pages/Login.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Login";
 }
 
-<section class="overflow-auto" style="margin: !important; height:100% !important;">
+<section class="overflow-hidden position-absolute m-auto" style="margin: auto !important; width:100% !important; height:100% !important;">
     <div class="px-4 py-5 px-md-5 text-center text-lg-start" style="background-color: hsl(0, 0%, 96%); height:100vh;">
         <div class="container">
             <div class="row gx-lg-5 align-self-center pt-5">
@@ -46,18 +46,22 @@
     </div>
 </section>
 
-<div class="modal fade" id="ModalWindow" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Error</h5>
-                <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">@Model.ErrorModel.Caption</div>
-            <div class="modal-footer">
-                <p class="lead">@Model.ErrorModel.Message</p>
-                <button type="button" class="btn btn-primary" data-mdb-dismiss="modal">Close</button>
+@if (Model.ErrorModel !=null)
+{
+    <div class="modal fade" id="ModalWindow" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Error</h5>
+                    <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">@Model.ErrorModel.Caption</div>
+                <div class="modal-footer">
+                    <p class="lead">@Model.ErrorModel.Message</p>
+                    <button type="button" class="btn btn-primary" data-mdb-dismiss="modal">Close</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
+}
+
