--- a/ProjectDriver_Client/Pages/Response/NotFound.cshtml
+++ b/ProjectDriver_Client/Pages/Response/NotFound.cshtml
@@ -1,4 +1,7 @@
 ﻿@page
 @model DriveYOU_WebClient.Pages.Response.NotFoundModel
-@{
-}
+<section class="overflow-auto" style="margin: !important; height:100% !important;">
+    <div class="container">
+      <h1 class="display-1 text-center m-auto">Not Found</h1>
+    </div>
+</section>
