--- a/ProjectDriver_Client/Pages/Account.cshtml
+++ b/ProjectDriver_Client/Pages/Account.cshtml
@@ -80,19 +80,21 @@
         }
     </div>
 </div>
-
-<div class="modal fade" id="ModalWindow" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Error</h5>
-                <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">@Model.ErrorModel.Caption</div>
-            <div class="modal-footer">
-                <p class="lead">@Model.ErrorModel.Message</p>
-                <button type="button" class="btn btn-primary" data-mdb-dismiss="modal">Close</button>
+@if (Model.ErrorModel != null)
+{
+    <div class="modal fade" id="ModalWindow" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Error</h5>
+                    <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">@Model.ErrorModel.Caption</div>
+                <div class="modal-footer">
+                    <p class="lead">@Model.ErrorModel.Message</p>
+                    <button type="button" class="btn btn-primary" data-mdb-dismiss="modal">Close</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
+}
