--- a/ProjectDriver_Client/Pages/Error.cshtml
+++ b/ProjectDriver_Client/Pages/Error.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model DriveYOU_WebClient.Pages.ErrorModel
+@model DriveYOU_WebClient.Pages.MessageModel
 @{
     ViewData["Title"] = "Error";
 }
