--- a/ProjectDriver_Client/Pages/TripDetailed.cshtml
+++ b/ProjectDriver_Client/Pages/TripDetailed.cshtml
@@ -105,7 +105,7 @@
         <h1 class="display-1 text-center m-auto">No elements for show</h1>
     }
 </div>
-@if (Model.ErrorModel != null)
+@if (Model.MessageModel != null)
 {
         <div class="modal fade" id="ModalWindow" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
@@ -114,9 +114,9 @@
                     <h5 class="modal-title" id="exampleModalLabel">Error</h5>
                     <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body">@Model.ErrorModel.Caption</div>
+                <div class="modal-body">@Model.MessageModel.Caption</div>
                 <div class="modal-footer">
-                    <p class="lead">@Model.ErrorModel.Message</p>
+                    <p class="lead">@Model.MessageModel.Message</p>
                     <button type="button" class="btn btn-primary" data-mdb-dismiss="modal">Close</button>
                 </div>
             </div>
