--- a/ProjectDriver_Client/Pages/CreateTrip.cshtml
+++ b/ProjectDriver_Client/Pages/CreateTrip.cshtml
@@ -1,6 +1,5 @@
 ﻿@page
 @model DriveYOU_WebClient.Pages.CreateTripModel
-
 @if (Model.TripModel == null)
 {
     Model.TripModel = new();
@@ -12,7 +11,7 @@
 {
     <div class="container position-relative" style="padding-top:30px;">
         <div class="card">
-            <form method="post" class="m-5">
+            <form method="post" class="m-5"> 
                 <h3 class="font-weight-bold mb-4" style="text-decoration:underline; text-decoration-color: #006eccff; text-decoration-thickness: 3px;">Add trip</h3>
                 <div class="d-flex flex-column flex-lg-row">
                     <div class="form-outline mb-4">
@@ -63,26 +62,25 @@
     </div>
 }else
 {
-    <div class="container position-fixed" style="padding-top:30px;">
-        <div class="card">
-            <h3 class="h3 text-center">You don't have a car</h3>
-            <p class="lead">Please add car info in your account first</p>
+    <div class="container position-relative" style="padding-top:30px;">
+        <div class="card p-5">
+            <h3 class="display-3 text-center">You don't have a car</h3>
+            <p class="lead text-center">Please add car info in your account first</p>
         </div>
     </div>
 }
 
-@if (Model.ErrorModel != null)
+@if (Model.MessageModel != null)
 {
     <div class="modal fade" id="ModalWindow" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Error</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">@Model.MessageModel.Caption</h5>
                     <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body">@Model.ErrorModel.Caption</div>
+                <div class="modal-body">@Model.MessageModel.Message</div>
                 <div class="modal-footer">
-                    <p class="lead">@Model.ErrorModel.Message</p>
                     <button type="button" class="btn btn-primary" data-mdb-dismiss="modal">Close</button>
                 </div>
             </div>
