--- a/ProjectDriver_Client/Pages/MyAccount.cshtml
+++ b/ProjectDriver_Client/Pages/MyAccount.cshtml
@@ -1,5 +1,9 @@
 ﻿@page "{handler?}"
 @model DriveYOU_WebClient.Pages.MyAccountModel
+@{
+    ViewData["Title"] = User.Identity.Name;
+}
+
 
 <div class="container position-relative" style="padding-top:30px;">
     <div class="card">
@@ -15,7 +19,7 @@
                 </div>
                 <div class="d-flex flex-column flex-lg-row">
                     <div class="form-outline mb-4">
-                        <input type="text" class="form-control" asp-route-model="@Model.UserModel" asp-for="InputUserModel.Name" required />
+                        <input type="text" class="form-control" asp-for="InputUserModel.Name" required />
                         <label class="form-label">Name</label>
                     </div>
                     <div class="form-outline mb-4 ml-lg-4">
@@ -43,11 +47,11 @@
             </form>
 
             <hr class="hr" />
-            
-            <form method="post" class="m-5">
+
+            <form method="post" asp-page-handler="Password" class="m-5">
                 <h3 class="font-weight-bold mb-4" style="text-decoration:underline; text-decoration-color: #006eccff; text-decoration-thickness: 3px;">Change password</h3>
                 <div class="form-outline mb-4">
-                    <input type="password" class="form-control" required />
+                    <input type="password" class="form-control" asp-for="InputPasswordModel.OldPassword" required />
                     <label class="form-label">Current password</label>
                 </div>
 
@@ -57,10 +61,10 @@
                 </div>
 
                 <div class="form-outline mb-4">
-                    <input type="password" class="form-control" asp-for="InputPasswordModel.Password" required />
+                    <input type="password" class="form-control" asp-for="InputPasswordModel.ConfirmPassword" required />
                     <label class="form-label">Repeat new password</label>
                 </div>
-                <button type="submit" class="btn btn-primary btn-block m-auto mb-4 w-50">Save changes</button>
+                <button type="submit" class="btn btn-primary btn-block m-auto mb-4">Save changes</button>
             </form>
             
             <hr class="hr" />
@@ -78,19 +82,22 @@
                 </div>
 
                 <div class="form-outline mb-4">
-                    <input type="file" class="form-control" name="ImageFile" placeholder="Photo" required />
+                    <input type="file" class="form-control" name="ImageFile" placeholder="Photo" />
                 </div>
 
                 <img class="img-thumbnail rounded mx-auto d-block mb-5" style="width:65%;" src="data:image/png;base64, @Model.UserModel.CarImage" />
                
-                <button type="submit" class="btn btn-primary btn-block m-auto mb-4 w-50">Save changes</button>
+                <button type="submit" class="btn btn-primary btn-block m-auto mb-4">Save changes</button>
             </form>
-            
+
             <hr class="hr" />
             
             <div class="m-5 text-center">
                 <h3 class="font-weight-bold mb-4" style="text-decoration:underline; text-decoration-color: #006eccff; text-decoration-thickness: 3px;">Profile preview</h3>
                 <a class="btn btn-primary" asp-route-id="@Model.UserModel.ID" asp-page="Account">Show my profile</a>
+            </div>
+            <div class="text-center mb-5">
+                <a class="btn btn-danger" asp-page-handler="Logout" asp-page="MyAccount">Sign out</a>
             </div>
         }
         else
@@ -100,21 +107,20 @@
     </div>
 </div>
 
-@if (Model.ErrorModel != null)
+@if (Model.MessageModel != null)
 {
     <div class="modal fade" id="ModalWindow" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Error</h5>
-                <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">@Model.ErrorModel.Caption</div>
-            <div class="modal-footer">
-                <p class="lead">@Model.ErrorModel.Message</p>
-                <button type="button" class="btn btn-primary" data-mdb-dismiss="modal">Close</button>
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">@Model.MessageModel.Caption</h5>
+                    <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">@Model.MessageModel.Message</div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-mdb-dismiss="modal">Close</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
 }
