--- a/ProjectDriver_Client/Pages/Shared/_Layout.cshtml
+++ b/ProjectDriver_Client/Pages/Shared/_Layout.cshtml
@@ -8,10 +8,8 @@
     <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
           rel="stylesheet" />
-    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
           rel="stylesheet" />
-    <!-- MDB -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.3.1/mdb.min.css"
           rel="stylesheet" />
     <link rel="stylesheet" href="/css/site.css" />
@@ -35,9 +33,8 @@
                         <li class="nav-item active">
                             <a class="nav-link" asp-area="" asp-page="/Index">Home</a>
                         </li>
-                        
                         <li class="nav-item active">
-                            <a class="nav-link" asp-area="" asp-page="/Error">Error</a>
+                            <a class="nav-link" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
                         @if (User.Identity.IsAuthenticated == true)
                         {
@@ -51,7 +48,7 @@
                                 <a class="nav-link" asp-area="" asp-page="MyAccount">@User.Identity.Name</a>
                             </li>
                             <li>
-                                <a class="btn btn-primary btn-danger" asp-page="CreateTrip">Add trip</a>
+                                <a class="btn btn-warning" asp-area="" asp-page="CreateTrip">Add trip</a>
                             </li>
                         }else
                         {
@@ -73,16 +70,12 @@
         </main>
     </div>
 
-    <!--<footer class="d-flex flex-wrap justify-content-center align-items-center py-3 my-4 border-top" style="position:relative; ">
-      
-        
+    <footer class="d-flex flex-wrap justify-content-center align-items-center py-3 my-4 border-top">
         <div class="text-center p-3">
             © 2020 Copyright:
             <a class="text-black-50" href="http://spacecoder.epizy.com">Spacecoder</a>
         </div>
-        
-       
-    </footer> -->
+    </footer>
 
 
     <script src="/lib/jquery/dist/jquery.min.js"></script>
