--- a/ProjectDriver_Client/Pages/Trips.cshtml
+++ b/ProjectDriver_Client/Pages/Trips.cshtml
@@ -1,5 +1,7 @@
 ﻿@page "{handler?}"
+@using Microsoft.JSInterop;
 @model DriveYOU_WebClient.Pages.TripsModel
+@inject IJSRuntime;
 @{
     ViewData["Title"] = "Trips";
 }
@@ -67,21 +69,20 @@
     }
 </div>
 
-@if(Model.ErrorModel != null)
+@if(Model.MessageModel != null)
 {
     <div class="modal fade" id="ModalWindow" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Error</h5>
-                    <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">@Model.ErrorModel.Caption</div>
-                <div class="modal-footer">
-                    <p class="lead">@Model.ErrorModel.Message</p>
-                    <button type="button" class="btn btn-primary" data-mdb-dismiss="modal">Close</button>
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">@Model.MessageModel.Caption</h5>
+                        <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">@Model.MessageModel.Message</div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-primary" data-mdb-dismiss="modal">Close</button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 }
