--- a/ProjectDriver_Client/Pages/Login.cshtml
+++ b/ProjectDriver_Client/Pages/Login.cshtml
@@ -62,5 +62,11 @@
             </div>
         </div>
     </div>
+            <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+        <script src="/lib/jquery/dist/jquery.min.js"></script>
+        <script src="/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+        <script>
+            $('#ModalWindow').modal('toggle');
+        </script>
 }
 
