--- a/ProjectDriver_Client/Pages/Trips.cshtml
+++ b/ProjectDriver_Client/Pages/Trips.cshtml
@@ -1,7 +1,6 @@
 ﻿@page "{handler?}"
 @using Microsoft.JSInterop;
 @model DriveYOU_WebClient.Pages.TripsModel
-@inject IJSRuntime;
 @{
     ViewData["Title"] = "Trips";
 }
@@ -85,4 +84,10 @@
                 </div>
             </div>
         </div>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="/lib/jquery/dist/jquery.min.js"></script>
+    <script src="/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        $('#ModalWindow').modal('toggle');
+    </script>
 }
